--- a/style.css
+++ b/style.css
@@ -1,28 +1,64 @@
-html, body {
-    font-family: 'Open Sans', sans-serif;
-    font-size: 16px;
-    line-height: 1.5;
-    color: #333;
-    background-color: #fff;
+.html, body {
+    height: 100vh;
+    width: 100vw;
+    font-size: 14px;
 }
+
+/*.nav {*/
+/*    display: flex;*/
+/*    flex-direction: row;*/
+/*    justify-content: space-between;*/
+/*}*/
 
 .header {
-    background-color: #fff;
-    border-bottom: 1px solid #eee;
+    background-color: #E27FE3;
+    height: 7%;
+    padding: 0 10px;
+    text-transform: uppercase;
+    font-size: 0.8rem;
+/*    a bot border solid expected, with a 10 px margin start and end*/
 }
 
-.header .container {
-    padding-top: 20px;
-    padding-bottom: 20px;
+.footer {
+    background-color: #E27FE3;
+    height: 15%;
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    padding: 0 15px;
 }
 
-.header .logo {
-    font-size: 24px;
-    font-weight: 700;
-    color: #333;
+.main {
+    background: none;
+    height: 78%;
+    margin: 0 5%;
+    overflow: scroll;
+
 }
 
-.header .logo a {
-    color: #333;
+.country {
+    justify-content: center;
+}
+
+.container-header {
+    margin-bottom: 2%;
+}
+
+
+.card {
+    margin-bottom: 1em;
+}
+
+.policy {
+    line-height: 0.1rem;
+}
+
+ul li {
+    display: inline;
+    margin: 0 0.5em;
+}
+
+a {
+    color: black;
     text-decoration: none;
 }
