--- a/style.css
+++ b/style.css
@@ -1,7 +1,9 @@
 .html, body {
     height: 100vh;
     width: 100vw;
+    margin:0;
     font-size: 14px;
+    padding: 10px;
 }
 
 /*.nav {*/
@@ -16,7 +18,7 @@
     padding: 0 10px;
     text-transform: uppercase;
     font-size: 0.8rem;
-/*    a bot border solid expected, with a 10 px margin start and end*/
+    /*    a bot border solid expected, with a 10 px margin start and end*/
 }
 
 .footer {
@@ -29,11 +31,9 @@
 }
 
 .main {
-    background: none;
     height: 78%;
-    margin: 0 5%;
+    padding: 20px;
     overflow: scroll;
-
 }
 
 .country {
@@ -59,6 +59,12 @@ ul li {
 }
 
 a {
-    color: black;
-    text-decoration: none;
+    /*color: black;*/
+    /*text-decoration: none;*/
+}
+
+.card-body {
+    /*    size must be the same for all*/
+    height: 20%;
+    width: 20%;
 }
