--- a/style.css
+++ b/style.css
@@ -1,7 +1,7 @@
 .html, body {
     height: 100vh;
     width: 100vw;
-    margin:0;
+    margin: 0;
     font-size: 14px;
     padding: 10px;
 }
@@ -16,7 +16,7 @@
     background-color: #E27FE3;
     height: 7%;
     padding: 0 10px;
-    text-transform: uppercase;
+    /*text-transform: uppercase;*/
     font-size: 0.8rem;
     /*    a bot border solid expected, with a 10 px margin start and end*/
 }
@@ -59,8 +59,8 @@ ul li {
 }
 
 a {
-    /*color: black;*/
-    /*text-decoration: none;*/
+    color: black;
+    text-decoration: none;
 }
 
 .card-body {
