--- a/style.css
+++ b/style.css
@@ -1,4 +1,4 @@
-.html, body {
+body {
     height: 100vh;
     width: 100vw;
     margin: 0;
@@ -28,15 +28,6 @@
     padding: 20px;
     overflow: scroll;
 }
-
-.country {
-    justify-content: center;
-}
-
-.container-header {
-    margin-bottom: 2%;
-}
-
 
 .card {
     margin-bottom: 1em;
